package b4hive;

public interface IPrintPattern {
    public String printPattern(float values[], int significantFigures);
}
