@startuml classDiagram

interface IPrintPattern <<inferface>> {
    +printPattern(float values[], int significantFigures):String
}

class PrintFactory {
    +printPattern(float values[], String patternType, int significantFigures):String
}

PrintFactory --> IPrintPattern
PrintFactory --> Class
PrintFactory --> Object
PrintFactory --> Exception

class PrintVertical implements IPrintPattern {
    +printPattern(float values[], int significantFigures):String
}

PrintVertical --> StringBuilder

class PrintHorizontal implements IPrintPattern {
    +printPattern(float values[], int significantFigures):String
}

PrintHorizontal --> StringBuilder

class PrintEncased implements IPrintPattern {
    +printPattern(float values[], int significantFigures):String
}

PrintEncased --> StringBuilder

@enduml